# XFEL-ML

./: README.md  _config.yaml  index.md  log_config.yml  pyproject.toml
PaperFigures/02_p1_feat_sel/: feat_sel_data.csv  generate.py  plot.py
PaperFigures/Figure Data/: delay_table.tex  map_delay.csv  map_pump.csv  pump_table.tex  samples_delay.csv
PaperFigures/Figure0/: delay_map.txt  pump_map.txt
PaperFigures/code/: delay_supp.py  epoch_convergence.py  figure3.py  figure4.py  figure45.py  final.mplstyle  sample_convergence.py
PaperFigures/s1_delay_feat_sel/: feat_sel_data.csv  generate.py  plot.py
PaperFigures/s3_sample_convergence/: plot.py  samples_pulse1.csv
doublePulse2017/: ann_feature_selection.py  ann_fit.py  doublePulse2017.ipynb  fit_grad_boost.py  gb_feature_selection.py  gb_fit.py  setup.py
doublePulse2017/code/: ann_feature_selection.py  ann_fit.py  gb_feature_selection.py  gb_fit.py  linear_fit.py  scatter_diff.py  setup.py
newMode2021/: newMode2021.ipynb  newModeHyperParams.ipynb  setup.py
newMode2021/code/: ann_probe_fit.py  ann_pump_fit.py  gb_probe_fit.py  gb_pump_fit.py  lin_probe_fit.py  lin_pump_fit.py  scatter_diff.py  setup.py  undulator_analysis.py
oldMode2017/: oldMode2017.ipynb  setup.py
pumpProbe2021/code/: ann_fit.py  ann_probe_fit.py  ann_pump_fit.py  gb_fit.py  gb_probe_fit.py  gb_pump_fit.py  gb_pump_no_corr.py  gp_probe_no_corr.py  lin_probe_fit.py  lin_pump_fit.py  scatter_diff.py  setup.py  undulator_analysis.py
tests/: utility_test.py
utility/: correlation_importance.py  helpers.py  split_prep_util.py
(+59 files in other folders)
