[tool.poetry]
name = "xfel-ml"
version = "0.1.0"
description = ""
authors = ["Karim <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
scipy = "^1.6.0"
pandas = "^1.2.1"
six = "1.15.0"
sklearn = "^0.0"
tensorboard = "^2.4.1"
tensorflow = "^2.4.1"
keras-tuner = "^1.0.2"
matplotlib = "^3.3.4"
xgboost = "^1.4.2"
Deprecated = "^1.2.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"